src/scss/_common.scss
body {
	font-family: $bodyFont;
	background: $backgroudColour;
	word-wrap: break-word;
	color: $textColour;

	h1,
	h2,
	h3,
	h4,
	h5,
	h6 {
		color: $primaryColour;
		font-family: $headingFont;
	}
}

a,
a:visited {
  color: $primaryColour;
}

.site-content {
  min-height: calc(100vh - 210px);
}

.page-content,
.entry-content,
.entry-summary {
  width: 72rem;
  max-width: 100%;
	margin: 1rem auto 2rem auto;
}

.aligncenter {
	margin: 0 auto;
}

.alignwide {
	margin: 0 auto 2rem auto;
	padding: 0 1rem;
}

.alignfull {
	min-width: 100%;
	margin: 0 0 2rem 0;
}

.entry-content {
  .alignwide {
    margin-left  : -80px;
    margin-right : -80px;
  }

  .alignfull {
    margin-left  : calc( -100vw / 2 + 100% / 2 );
    margin-right : calc( -100vw / 2 + 100% / 2 );
    max-width    : 100vw;
    width: 100vw;
  }

  .wp-block-table {
    margin: 0 1rem;
    box-sizing: border-box;
    max-width: 100%;
    width: calc(100% - 2rem);

    tr {
      padding-bottom: 1em;

      &:nth-child(even) {
        background: $lightBlue;
        color: $white;
        a {
          color: $white;
        }
      }
    }

    td {
      padding: 0.5em;
    }
  }
}

.entry .entry-content,
.entry .entry-summary,
.wp-block-quote.is-large,
.wp-block-quote.is-style-large {
  margin: 2rem auto;
}

body.home {
	.entry-content {
		margin-top: 0;
	}
	 .entry-header {
		display: none;
	}
}

/* Entry Widths*/
header.entry-header,
footer.entry-footer,
.entry-content p,
.entry-content h1,
.entry-content h2,
.entry-content h3,
.entry-content h4,
.entry-content h5,
.entry-content h6,
.entry-content ol,
.entry-content ul,
.entry-content dl,
.entry-content address,
figure.wp-block-audio,
figure.wp-block-embed,
.wp-block-preformatted,
pre.wp-block-verse,
.wp-block-quote,
.wp-block-image,
.wp-block-columns,
.wp-block-gallery,
.wp-block-button,
.testimonial,
.googlemaps,
[id^=contact-form-],
#comments,
.navigation.post-navigation,
#tix {
  width: 72rem;
	max-width: 100%;
	margin: 1rem auto;
	padding: 0 1rem;
}

.wp-block-embed {
	margin: 1rem auto 2rem auto;
}

iframe {
	margin: 0 auto;
}

.wp-block-columns .wp-block-column p {
	padding: 0.75rem;
}

.wp-block-cover-image,
.wp-block-cover {
  min-height: 15rem;
}

.wp-block-button {
	margin: 1rem auto;

	&.alignright {
    width: 72rem;
		max-width: 100%;
	}
}

.entry-content ol,
.entry-content ul,
.entry-content dl {
	margin: 1rem auto;
	padding-left: 2rem;
}

.youtube-player {
	margin: auto;
}

p.no-comments {
	display: none;
}

.site-info {
	text-align: center;

	a {
		margin: 1rem 2rem;
	}
}

@media screen and (min-width: 64rem) {
  body.home .wp-block-cover {
    min-height: 460px;
    background-color: transparent;
	}

	body.home .wp-block-cover__inner-container {
		position: absolute;
		bottom: 0;

		h2 {
			font-size: 4rem;
			font-weight: 400;
			text-shadow: 0 0 30px rgba(0,0,0,0.9);
			font-family: $bodyFont;
		}

		p {
			font-size: 1.5rem;
			font-family: $headingFont;
			font-weight: 600;
			text-shadow: 0 0 20px rgba(0,0,0,0.9);
		}
  }

  body.page-template-default #content.site-content {
		max-width: 100%;
		width: 72rem;
		margin: 0 auto;
		padding: 1rem 1rem;

		#primary {
			float: left;
			width: calc(75% - 1rem);
			background: $white;
			border-radius: .5rem;
			margin-right: 1rem;
		}

		#secondary {
			width: calc( 25% - 1rem);
			float: right;
			margin-left: 1rem;

			.widget {
				background: $white;
				padding: .25rem .5rem 0 .5rem;
				border-radius: .5rem;
				border: 1px solid rgba(61,4,102,0.5);

				h2.widget-title {
					margin: -.25rem -.5rem;
					color: $white;
					background: $darkPurple;
					padding: .5rem;
					border-radius: .5rem .5rem 0 0;
					font-size: 1.125em;
				}
			}
		}
	}
}

ul {
  list-style: none;
}

ul:not(.menu) li::before {
  content: "\2022";
  color: $medBlue;
  font-weight: bold;
  display: inline-block;
  width: 1em;
  margin-left: -1em;
}

@media screen and (min-width: 64rem) {
  .wp-block-image figure {
    &.alignleft,
    &.alignright {
      width: 115%;
      height: auto;
    }

    &.alignleft {
      margin-left: -60px;
    }

    &.alignright {
      margin-right: -60px;
    }
  }

  .wp-block-image {
    &.alignfull,
    &.alignwide {
      margin: 0;
      padding: 0;

        img {
        max-width: 100vw;
        width: 100vw;
        height: auto;
      }
    }
  }
}

